# Chatbot

./: .gitignore  .glimpse  OFFLINE_ARCHITECTURE.md  PROJECT_ANALYSIS.md  README.md  chatbot.ipynb  package-lock.json  package.json
.data/: chatbot.db
backend/: .env  .env.example  README.md  cli.py  inference_core.py  main.py  model_config.py  nanochat_runtime.py  offline_inference.py  pyproject.toml  requirements.txt  runtime_bootstrap.py  write_main.py
db/: supabase-schema.sql
frontend/: .env.local  .env.local.example  package-lock.json  package.json
frontend/src/app/: actions.ts  globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/signin/: page.tsx
frontend/src/app/signup/: page.tsx
frontend/src/components/: ChatView.tsx  InputBar.tsx  Sidebar.tsx  StartScreen.tsx  offline-chat-app.tsx  settings-modal.tsx  theme-provider.tsx
frontend/src/components/auth/: auth-form.tsx
frontend/src/components/chat/: chat-container.tsx  chat-input.tsx  chat-message.tsx  empty-state.tsx  sidebar.tsx
frontend/src/components/ui/: button.tsx  input.tsx
frontend/src/lib/: chat-engine.ts  offline-db.ts  offline-types.ts  supabase.ts  utils.ts
frontend/src/store/: auth-store.ts  chat-store.ts
scripts/: download_nanochat.py
