[project]
name = "backend"
version = "0.1.0"
description = "Offline inference backend for the local chatbot project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "huggingface-hub>=1.12.0",
    "numpy>=2.4.4",
    "tiktoken>=0.12.0",
    "torch>=2.11.0",
    "uvicorn[standard]>=0.35.0",
]
